fixing padding on mobile

--- a/fed-funds/styles.css
+++ b/fed-funds/styles.css
@@ -2,7 +2,7 @@
 @media (max-width: 599px) {
     body {
         margin: 0;
-        padding: 0 10%;
+        padding: 0 5%;
         background-color: #f4f4f4;
         color: #333;
         line-height: 1.6;
@@ -33,7 +33,7 @@
     }
 
     h1, h2, p {
-        padding: 0 40px;
+        padding: 0 10px;
     }
 }
 
